Added correct contributors to composer.json

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,11 @@
     "authors": [
         {
             "name": "Jeroen van Steijn",
-            "email": "J.J.vanSteijn@student.tudelft.nl"
+            "email": "jeroen@bytecode.nl"
+        },
+        {
+            "name": "Luciano Nooijen",
+            "email": "luciano@bytecode.nl"
         }
     ]
 }
